fix project page spacing

--- a/css/styles.css
+++ b/css/styles.css
@@ -42,7 +42,7 @@ html, body {
     top: 0;
     bottom: 0;
     border: solid gray 15px;
-    padding-top: 25px;
+    padding-top: 15px;
 }
 
 /* Home styles */
@@ -142,7 +142,7 @@ a:focus {
 /* Project styles */
 
 .img {
-	margin-top: 25px;
+	margin-top: 35px;
 	margin-left: 275px;
 	height: 50%;
 	width: 50%;
